--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -6,6 +6,7 @@ $testing-black: #000;
 
 $white-color: #fff;
 $black-color: #000;
+$cobolt-color: #004ba3;
 
 $paper-white-color: #fefefe;
 $charcoal-grey-color: #4e4e4e;
