--- a/assets/styles/themes.scss
+++ b/assets/styles/themes.scss
@@ -1,7 +1,8 @@
 $background-default-color: $metal-grey-color;
 $resume-background-color: $paper-white-color;
 $printing-background-color: $white-color;
-$a-color-override: $black-color;
+$a-color-override: $cobolt-color;
+
 @media print {
   a {
     text-decoration: none !important;
@@ -49,7 +50,7 @@ address {
 
 body {
   background-color: $background-default-color;
-  background-image: url("https://i.imgur.com/2aEAsTA.jpg");
+  background-image: url('https://i.imgur.com/2aEAsTA.jpg');
   background-size: cover;
   display: flex;
   font-family: 'Lato', sans-serif;
@@ -70,16 +71,23 @@ body {
 }
 
 .cfb-and-interim {
-  margin-top: -.3em;
+  // margin-top: -.3em;
 }
 
 .edu-awards {
   margin-bottom: .1em;
-  margin-top: .2em;
 }
 
 .fun-fact {
-  transform: translateY(-2.4em);
+  transform: translateY(-2.2em);
+}
+
+.fun-fact-body {
+  padding-left: 1rem;
+}
+
+.org-title {
+  margin-top: -.3rem;
 }
 
 h1 {
@@ -89,6 +97,16 @@ h1 {
 
 h4 {
   font-family: 'Lato', sans-serif;
+}
+
+.h4-span {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.5rem;
+}
+
+.h6-span {
+  font-family: 'Lato', sans-serif;
+  vertical-align: .1rem;
 }
 
 .heading-name {
@@ -107,6 +125,11 @@ html {
   box-sizing: content-box;
 }
 
+.leadership-pm {
+  margin-bottom: -.6rem;
+  margin-top: .3rem;
+}
+
 .skills-additional {
   padding-bottom: 0;
   transform: translateY(-.8em);
@@ -118,6 +141,10 @@ html {
 
 .personal-summary {
   font-size: 0.917em;
+}
+
+.projects {
+  margin-top: .3rem;
 }
 
 .project-middle {
