--- a/assets/styles/themes.scss
+++ b/assets/styles/themes.scss
@@ -51,10 +51,12 @@ address {
 body {
   background-color: $background-default-color;
   background-image: url('https://i.imgur.com/2aEAsTA.jpg');
+  background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   font-family: 'Lato', sans-serif;
   justify-content: center;
+  min-height: 100vh;
   padding-bottom: 5%;
   padding-top: 5%;
 
